RESOLVED FIXED 255188
[Ui-side compositing] Fix mouse position reporting to AppKit in WebScrollerImpPairDelegateMac
https://bugs.webkit.org/show_bug.cgi?id=255188
Summary [Ui-side compositing] Fix mouse position reporting to AppKit in WebScrollerIm...
Nikos Mouchtaris
Reported 2023-04-07 18:08:26 PDT
[Ui-side compositing] Fix mouse position reporting to AppKit in WebScrollerImpPairDelegateMac
Attachments
Radar WebKit Bug Importer
Comment 1 2023-04-07 18:09:18 PDT
Nikos Mouchtaris
Comment 2 2023-04-07 18:16:12 PDT
EWS
Comment 3 2023-04-14 16:44:27 PDT
Committed 262995@main (caec1d312c59): <https://commits.webkit.org/262995@main> Reviewed commits have been landed. Closing PR #12542 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.