Source/WebCore/page/scrolling/ScrollingStateScrollingNode.h
@@ -53,6 +53,11 @@ struct ScrollbarHoverState {
     }
 };
 
+struct MouseLocationState {
+    IntPoint locationInHorizontalScrollbar;
+    IntPoint locationInVerticalScrollbar;
+};
+
 class ScrollingStateScrollingNode : public ScrollingStateNode {
 public:
     virtual ~ScrollingStateScrollingNode();
@@ -128,7 +133,8 @@ public:
     WEBCORE_EXPORT void setMouseIsOverContentArea(bool);
     bool mouseIsOverContentArea() const { return m_mouseIsOverContentArea; }
 
-    WEBCORE_EXPORT void setMouseMovedInContentArea();
+    WEBCORE_EXPORT void setMouseMovedInContentArea(const MouseLocationState&);
+    const MouseLocationState& mouseLocationState() const { return m_mouseLocationState; }
 
 protected:
     ScrollingStateScrollingNode(ScrollingStateTree&, ScrollingNodeType, ScrollingNodeID);
@@ -154,6 +160,7 @@ private:
     LayerRepresentation m_verticalScrollbarLayer;
     
     ScrollbarHoverState m_scrollbarHoverState;
+    MouseLocationState m_mouseLocationState;
 
 #if PLATFORM(MAC)
     RetainPtr<NSScrollerImp> m_verticalScrollerImp;
