Source/WebCore/page/scrolling/mac/ScrollingTreeScrollingNodeDelegateMac.mm
@@ -92,7 +92,7 @@ void ScrollingTreeScrollingNodeDelegateMac::updateFromStateNode(const ScrollingS
     }
     
     if (scrollingStateNode.hasChangedProperty(ScrollingStateNode::Property::MouseActivityState))
-        m_scrollerPair->mouseMovedInContentArea();
+        m_scrollerPair->mouseMovedInContentArea(scrollingStateNode.mouseLocationState());
 
     m_scrollerPair->updateValues();
 
@@ -326,11 +326,6 @@ void ScrollingTreeScrollingNodeDelegateMac::updateScrollbarLayers()
 void ScrollingTreeScrollingNodeDelegateMac::handleWheelEventPhase(const PlatformWheelEventPhase wheelEventPhase)
 {
     m_scrollerPair->handleWheelEventPhase(wheelEventPhase);
-}
-
-bool ScrollingTreeScrollingNodeDelegateMac::handleMouseEventForScrollbars(const PlatformMouseEvent& mouseEvent)
-{
-    return m_scrollerPair->handleMouseEvent(mouseEvent);
 }
 
 void ScrollingTreeScrollingNodeDelegateMac::viewWillStartLiveResize()
